# WorkOS-hackathon

./: .gitignore  CLAUDE.md  README.md  changelog.txt  info.json  lib.lua  settings.lua
app/: .env.example  .gitignore  Package.swift  README.md
app/Sources/OverlayApp/: main.swift
app/Sources/OverlayCore/Models/: Contracts.swift
app/Sources/OverlayCore/Services/: AdalTerminalBridge.swift  AgentClient.swift  CaptureService.swift  GameWindowTracker.swift  OverlayLayoutController.swift  OverlayWindowController.swift  SidecarManager.swift  VoiceClient.swift
app/Sources/OverlayCore/Utils/: OverlayGeometry.swift
app/Sources/OverlayCore/Views/: OverlayRootView.swift  OverlayViewModel.swift
app/Tests/OverlayAppTests/: OverlayGeometryTests.swift
app/agent-sidecar/: package-lock.json  package.json
app/agent-sidecar/src/: agent.ts  index.ts  security.ts  server.ts  types.ts
app/agent-sidecar/test/: security.test.js  security.test.ts
app/scripts/: dev.sh
app/voice-sidecar/: main.py  pyproject.toml
factorio-server/: AGENTS.md  server-settings.json  start-server.sh
locale/en/: _Template.cfg
mod/: AGENTS.md  CLAUDE.md  control.lua  data.lua  info.json
mod/locale/en/: hackium.cfg
mod/prototypes/: recipe.lua  resource.lua  warehouse.lua
mod/rcon-script/: draw-sprite-rcon.ts  package-lock.json  package.json  test-rcon.ts
mod/scripts/: events.lua
overlay-electron/: AGENTS.md  bridge-adal.sh  index.html  main.js  package-lock.json  package.json  preload.js  start-adal-tmux.sh  wininfo  wininfo.swift
